--- a/style.css
+++ b/style.css
@@ -94,10 +94,15 @@ body {
     display: flex;
     flex-direction: column;
     align-items: center;
+    padding-bottom: 48px;
 }
 .card-square {
     border: 3px #3882F6 solid;
-    border-radius: 12px;
+    border-radius: 24px;
     height: 200px;
     width: 200px;
+}
+
+.card-text {
+    padding: 12px;
 }
