--- a/style.css
+++ b/style.css
@@ -51,9 +51,32 @@ body {
 .left {
   display: flex;
   flex-direction: column;
-  align-items: center;
+  align-items: flex-start;
+  margin-right: 12px;
   width: 50%;
   color: white;
+}
+
+.title {
+    font-size: 48px;
+    font-weight: bolder;
+    color: #F9FAF8;
+    padding: 8px 0;
+}
+
+.description {
+    font-size: 18px;
+    color: #e5e7ebad;
+}
+
+.button button {
+    background-color: #3882F6;
+    color: #F9FAF8;
+    border: none;
+    padding: 8px 24px;
+    margin-top: 8px;
+    border-radius: 8px;
+
 }
 .right {
   display: flex;
