--- a/style.css
+++ b/style.css
@@ -98,6 +98,8 @@ body {
     display: flex;
     flex-direction: column;
     align-items: center;
+    width: 75%;
+    margin: 0 auto;
 }
 
 .info-title {
@@ -110,6 +112,7 @@ body {
 .cards {
     display: flex;
     justify-content: space-around;
+    flex-wrap: wrap;
     gap: 48px;
 }
 
@@ -128,4 +131,8 @@ body {
 
 .card-text {
     padding: 12px;
+}
+
+.quote-container {
+    display: flex;
 }
