--- a/style.css
+++ b/style.css
@@ -133,6 +133,20 @@ body {
     padding: 12px;
 }
 
+.quote-section {
+    background-color: #E5E7EB;
+}
 .quote-container {
     display: flex;
+    flex-direction: column;
+    align-items: center;
+    width: 75%;
+    margin: 0 auto;
+    padding: 96px 0;
+}
+
+.quote {
+    font-size: 28px;
+    color: grey;
+    font-style: italic;
 }
