--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@ body {
 }
 
 .hero-container {
-    background-color: #1f2937;
+  background-color: #1f2937;
 }
 
 .header {
@@ -17,16 +17,15 @@ body {
 }
 
 .nav {
-    display: flex;
-    gap: 24px;
+  display: flex;
+  gap: 24px;
 }
 
 .logo {
-    font-size: 24px;
-    color: #E5E7EB;
-    font-weight: bold;
+  font-size: 24px;
+  color: #e5e7eb;
+  font-weight: bold;
 }
-
 
 .nav-link a {
   text-decoration: none;
@@ -58,25 +57,24 @@ body {
 }
 
 .title {
-    font-size: 48px;
-    font-weight: bolder;
-    color: #F9FAF8;
-    padding: 8px 0;
+  font-size: 48px;
+  font-weight: bolder;
+  color: #f9faf8;
+  padding: 8px 0;
 }
 
 .description {
-    font-size: 18px;
-    color: #e5e7ebad;
+  font-size: 18px;
+  color: #e5e7ebad;
 }
 
 .button button {
-    background-color: #3882F6;
-    color: #F9FAF8;
-    border: none;
-    padding: 8px 24px;
-    margin-top: 8px;
-    border-radius: 8px;
-
+  background-color: #3882f6;
+  color: #f9faf8;
+  border: none;
+  padding: 8px 24px;
+  margin-top: 8px;
+  border-radius: 8px;
 }
 .right {
   display: flex;
@@ -85,106 +83,115 @@ body {
 }
 
 .image {
-    background-color: grey;
-    height: 250px;
-    width: 600px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    color: white;
-    font-weight: 500;
+  background-color: grey;
+  height: 250px;
+  width: 600px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  color: white;
+  font-weight: 500;
 }
 .info {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    width: 75%;
-    margin: 0 auto;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  width: 75%;
+  margin: 0 auto;
 }
 
 .info-title {
-    font-size: 36px;
-    font-weight: bolder;
-    color: #1f2937;
-    padding: 48px 0;
+  font-size: 36px;
+  font-weight: bolder;
+  color: #1f2937;
+  padding: 48px 0;
 }
 
 .cards {
-    display: flex;
-    justify-content: space-around;
-    flex-wrap: wrap;
-    gap: 48px;
+  display: flex;
+  justify-content: space-around;
+  flex-wrap: wrap;
+  gap: 48px;
 }
 
 .card {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    padding-bottom: 48px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding-bottom: 48px;
 }
 .card-square {
-    border: 3px #3882F6 solid;
-    border-radius: 24px;
-    height: 200px;
-    width: 200px;
+  border: 3px #3882f6 solid;
+  border-radius: 24px;
+  height: 200px;
+  width: 200px;
 }
 
 .card-text {
-    padding: 12px;
+  padding: 12px;
 }
 
 .quote-section {
-    background-color: #E5E7EB;
+  background-color: #e5e7eb;
 }
 .quote-container {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    width: 75%;
-    margin: 0 auto;
-    padding: 96px 0;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  width: 75%;
+  margin: 0 auto;
+  padding: 96px 0;
 }
 
 .quote {
-    font-size: 28px;
-    color: grey;
-    font-style: italic;
+  font-size: 28px;
+  color: grey;
+  font-style: italic;
 }
 
 .cta-block {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    width: 75%;
-    margin: 0 auto;
-    padding: 96px 0;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 75%;
+  margin: 0 auto;
+  padding: 96px 0;
 }
 
 .cta-container {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    gap: 48px;
-    background-color: #3882F6;
-    padding: 48px 182px;
-    border-radius: 12px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  gap: 48px;
+  background-color: #3882f6;
+  padding: 48px 182px;
+  border-radius: 12px;
 }
 
 .cta-title {
-    color: white;
-    font-size: 18px;
-    font-weight: bold;
+  color: white;
+  font-size: 18px;
+  font-weight: bold;
 }
 
 .cta-description {
-    color: white;
-    font-weight: 200;
+  color: white;
+  font-weight: 200;
 }
 
 .cta-button button {
-    background: none;
-    border: 2px solid white;
-    border-radius: 8px;
+  background: none;
+  border: 2px solid white;
+  border-radius: 8px;
+  color: white;
+  padding: 6px 24px;
+}
+
+footer {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 48px 0;
+    background-color: #1f2937;
     color: white;
-    padding: 6px 24px;
 }
